--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "webots_ros2_importer/webots_ros2_importer/urdf2webots"]
 	path = webots_ros2_importer/webots_ros2_importer/urdf2webots
-	url = https://github.com/cyberbotics/urdf2webots.git
+	url = https://github.com/lkx8421/urdf2webots.git
+	branch = joint_limit
